name:              ecdis
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home
                     Data.IHO.Preslib
                     Data.IHO.Preslib.Data

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.2        
                 , yesod-core                    >= 1.2        
                 , yesod-auth                    >= 1.2        
                 , yesod-static                  >= 1.2       
                 , yesod-form                    >= 1.3        
                 , bytestring                    >= 0.9        
                 , text                          >= 0.11       
                 , persistent                    >= 1.2        
                 , persistent-sqlite             >= 1.2        
                 , persistent-template           >= 1.2        
                 , template-haskell
                 , hamlet                        >= 1.1        
                 , shakespeare                   >= 2.0      
                 , hjsmin                        >= 0.1        
                 , monad-control                 >= 0.3        
                 , wai-extra                     >= 2.0        
                 , yaml                          >= 0.8        
                 , http-conduit                  >= 2.0        
                 , directory                     >= 1.1        
                 , warp                          >= 2.0        
                 , data-default
                 , aeson
                 , conduit                       >= 1.0
                 , monad-logger                  >= 0.3
                 , fast-logger                   >= 2.0
                 , wai-logger                    >= 2.0
                 , attoparsec			 >= 0.11
                 , iho-presentation
                 , containers
                 , time
                 , old-locale

executable         ecdis
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , ecdis
                     , yesod

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , ecdis
                 , yesod-test >= 1.2 && < 1.3
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-sqlite
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
